[tool.poetry]
name = "kcc programming language"
version = "0.01"
description = "KCC Programming Language"
authors = ["Kaveh Eskandari"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
lark = "^1.1.5"
matplotlib = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
